Suppréssion de bcp de warnings